# PrimePaymentApi

./: pyproject.toml
primepaymentapi/: __init__.py  enums.py
primepaymentapi/core/: __init__.py  methods.py  payment.py
primepaymentapi/tests/: 1.py
primepaymentapi/utils/: models.py
